--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
     <header>
-        <a href="/">
-            <img src="./images/Logo.png" alt="logo" width="115" height="24">
-        </a>
         <nav>
+            <a href="./index.html">
+                <img src="./images/Logo.png" alt="WebStudio" width="115" height="24">
+            </a>
             <ul>
                 <li>
                     <a href="/">Studio</a>
@@ -26,8 +26,14 @@
             </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
     </header>
 
@@ -40,28 +46,28 @@
         <section>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h2>Strategy</h2>
                     <p>
                         Our goal is to identify the business problem to walk away with the perfect and creative
                         solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h2>Punctuality</h2>
                     <p>
                         Bring the key message to the brand's audience for the best price within the shortest possible
                         time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h2>Diligence</h2>
                     <p>
                         Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h2>Technologies</h2>
                     <p>
                         Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
@@ -98,8 +104,8 @@
     </main>
 
     <footer>
-        <a href="/">
-            <img src="./images/Logo.png" alt="logo" width="115" height="24">
+        <a href="./index.html">
+            <img src="./images/Logo.png" alt="WebStudio" width="115" height="24">
         </a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
