--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
     <header>
         <nav>
-            <a href="./index.html">
-                <img src="./images/Logo.png" alt="WebStudio" width="115" height="24">
-            </a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
                     <a href="/">Studio</a>
@@ -44,30 +42,31 @@
         </section>
 
         <section>
+            <h2>Advantages</h2>
             <ul>
                 <li>
-                    <h2>Strategy</h2>
+                    <h3>Strategy</h3>
                     <p>
                         Our goal is to identify the business problem to walk away with the perfect and creative
                         solution.
                     </p>
                 </li>
                 <li>
-                    <h2>Punctuality</h2>
+                    <h3>Punctuality</h3>
                     <p>
                         Bring the key message to the brand's audience for the best price within the shortest possible
                         time.
                     </p>
                 </li>
                 <li>
-                    <h2>Diligence</h2>
+                    <h3>Diligence</h3>
                     <p>
                         Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h2>Technologies</h2>
+                    <h3>Technologies</h3>
                     <p>
                         Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
@@ -104,9 +103,7 @@
     </main>
 
     <footer>
-        <a href="./index.html">
-            <img src="./images/Logo.png" alt="WebStudio" width="115" height="24">
-        </a>
+        <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
