--- a/index.html
+++ b/index.html
@@ -4,70 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+        integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" class="first-part-logo">Web<span class="header-part-logo">Studio</span></a>
             <ul>
                 <li>
-                    <a href="/">Studio</a>
+                    <a href="/" class="navigation">Studio</a>
                 </li>
                 <li>
-                    <a href="/">Portfolio</a>
+                    <a href="/" class="navigation">Portfolio</a>
                 </li>
                 <li>
-                    <a href="/">Contacts</a>
+                    <a href="/" class="navigation">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
 
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="title">
+            <h1 class="title-text">Effective Solutions for Your Business</h1>
+            <button type="button" class="title-button">Order Service</button>
         </section>
 
         <section>
             <h2>Advantages</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>
+                    <h3 class="advantages-title">Strategy</h3>
+                    <p class="advantages-text">
                         Our goal is to identify the business problem to walk away with the perfect and creative
                         solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>
+                    <h3 class="advantages-title">Punctuality</h3>
+                    <p class="advantages-text">
                         Bring the key message to the brand's audience for the best price within the shortest possible
                         time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>
+                    <h3 class="advantages-title">Diligence</h3>
+                    <p class="advantages-text">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>
+                    <h3 class="advantages-title">Technologies</h3>
+                    <p class="advantages-text">
                         Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
                     </p>
@@ -75,36 +83,72 @@
             </ul>
         </section>
 
+        <section class="team-section">
+            <h2 class="team-title">Our Team</h2>
+            <ul>
+                <li class="team-card">
+                    <img src="./images/img-3-min.jpg" alt="mark guerrero" width="264" height="260">
+                    <h3 class="staff-name">Mark Guerrero</h3>
+                    <p class="staff-major">Product Designer</p>
+                </li>
+                <li class="team-card">
+                    <img src="./images/img-2-min.jpg" alt="tom ford" width="264" height="260">
+                    <h3 class="staff-name">Tom Ford</h3>
+                    <p class="staff-major">Frontend Developer</p>
+                </li>
+                <li class="team-card">
+                    <img src="./images/img-1-min.jpg" alt="camila garcia" width="264" height="260">
+                    <h3 class="staff-name">Camila Garcia</h3>
+                    <p class="staff-major">Marketing</p>
+                </li>
+                <li class="team-card">
+                    <img src="./images/img-min.jpg" alt="daniel wilson" width="264" height="260">
+                    <h3 class="staff-name">Daniel Wilson</h3>
+                    <p class="staff-major">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
         <section>
-            <h2>Our Team</h2>
+            <h2 class="portfolio-title">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images/img-3.jpg" alt="mark guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <img src="./images/img-5-portfolio.jpg" alt="" width="360" height="300">
+                    <h3 class="app-name">Banking App</h3>
+                    <p class="app-scope">App</p>
                 </li>
                 <li>
-                    <img src="./images/img-2.jpg" alt="tom ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <img src="./images/img-4-portfolio.jpg" alt="" width="360" height="300">
+                    <h3 class="app-name">Cashless Payment</h3>
+                    <p class="app-scope">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img-1.jpg" alt="camila garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <img src="./images/img-3-portfolio.jpg" alt="" width="360" height="300">
+                    <h3 class="app-name">Meditation App</h3>
+                    <p class="app-scope">App</p>
                 </li>
                 <li>
-                    <img src="./images/img.jpg" alt="daniel wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <img src="./images/img-2-portfolio.jpg" alt="" width="360" height="300">
+                    <h3 class="app-name">Taxi Service</h3>
+                    <p class="app-scope">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-1-portfolio.jpg" alt="" width="360" height="300">
+                    <h3 class="app-name">Screen Illustrations</h3>
+                    <p class="app-scope">Design</p>
+                </li>
+                <li>
+                    <img src="./images/img-portfolio.jpg" alt="" width="360" height="300">
+                    <h3 class="app-name">Online Courses</h3>
+                    <p class="app-scope">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+        <a href="./index.html" class="first-part-logo">Web<span class="footer-part-logo">Studio</span></a>
+        <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
