--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
             <a href="./index.html" class="first-part-logo">Web<span class="header-part-logo">Studio</span></a>
             <ul>
                 <li>
-                    <a href="/" class="navigation">Studio</a>
+                    <a href="" class="navigation">Studio</a>
                 </li>
                 <li>
-                    <a href="/" class="navigation">Portfolio</a>
+                    <a href="" class="navigation">Portfolio</a>
                 </li>
                 <li>
-                    <a href="/" class="navigation">Contacts</a>
+                    <a href="" class="navigation">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address>
+        <address class="contacts">
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -113,32 +113,32 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images/img-5-portfolio.jpg" alt="" width="360" height="300">
+                    <img src="./images/img-5-portfolio.jpg" alt="banking app" width="360" height="300">
                     <h3 class="app-name">Banking App</h3>
                     <p class="app-scope">App</p>
                 </li>
                 <li>
-                    <img src="./images/img-4-portfolio.jpg" alt="" width="360" height="300">
+                    <img src="./images/img-4-portfolio.jpg" alt="cashless payment" width="360" height="300">
                     <h3 class="app-name">Cashless Payment</h3>
                     <p class="app-scope">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img-3-portfolio.jpg" alt="" width="360" height="300">
+                    <img src="./images/img-3-portfolio.jpg" alt="meditation app" width="360" height="300">
                     <h3 class="app-name">Meditation App</h3>
                     <p class="app-scope">App</p>
                 </li>
                 <li>
-                    <img src="./images/img-2-portfolio.jpg" alt="" width="360" height="300">
+                    <img src="./images/img-2-portfolio.jpg" alt="taxi service" width="360" height="300">
                     <h3 class="app-name">Taxi Service</h3>
                     <p class="app-scope">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img-1-portfolio.jpg" alt="" width="360" height="300">
+                    <img src="./images/img-1-portfolio.jpg" alt="screen illustrations" width="360" height="300">
                     <h3 class="app-name">Screen Illustrations</h3>
                     <p class="app-scope">Design</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio.jpg" alt="" width="360" height="300">
+                    <img src="./images/img-portfolio.jpg" alt="online courses" width="360" height="300">
                     <h3 class="app-name">Online Courses</h3>
                     <p class="app-scope">Marketing</p>
                 </li>
@@ -146,7 +146,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="main-footer">
         <a href="./index.html" class="first-part-logo">Web<span class="footer-part-logo">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
