--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="./index.html" class="first-part-logo">Web<span class="header-part-logo">Studio</span></a>
             <ul>
                 <li>
-                    <a href="" class="navigation">Studio</a>
+                    <a href="./index.html" class="navigation">Studio</a>
                 </li>
                 <li>
                     <a href="" class="navigation">Portfolio</a>
@@ -31,13 +31,13 @@
                 </li>
             </ul>
         </nav>
-        <address class="contacts">
+        <address class="header-contacts">
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contacts-info">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="contacts-info">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
